# snooker-cal-sync

./: .gitignore  Cargo.toml
src/: google_cal.rs  json.json  main.rs  matches.json  players.json  wst-tournement.json  wst-tournements.json  wst.rs
